[gd_scene load_steps=32 format=3 uid="uid://d4mompuxnjq0i"]

[ext_resource type="Script" uid="uid://yunuykgjdb6j" path="res://scenes/game/stages/hell.gd" id="1_p36mu"]
[ext_resource type="Texture2D" uid="uid://bpoxjroib48pj" path="res://assets/images/game/stages/hell/underworld/loganhedz.png" id="2_b2ggg"]
[ext_resource type="Texture2D" uid="uid://cfuywldyhgpq" path="res://assets/images/game/stages/hell/underworld/eyebal.png" id="3_f1daq"]
[ext_resource type="SpriteFrames" uid="uid://b7k843k1h1uvl" path="res://assets/images/game/stages/hell/underworld/statid.xml" id="4_f1daq"]
[ext_resource type="Texture2D" uid="uid://cr64xkv2jsw52" path="res://assets/images/game/stages/hell/underworld/hill1.png" id="5_e5c7t"]
[ext_resource type="Texture2D" uid="uid://2rlt00rp0wn1" path="res://assets/images/game/stages/hell/underworld/hill2.png" id="6_p36mu"]
[ext_resource type="Texture2D" uid="uid://c4hyuuire3tpd" path="res://assets/images/game/stages/hell/underworld/hill3.png" id="7_5leje"]
[ext_resource type="SpriteFrames" uid="uid://bneyp6nt4gcdc" path="res://assets/images/game/stages/hell/underworld/axehouse.xml" id="8_p36mu"]
[ext_resource type="VideoStream" uid="uid://cl57ant88v4yq" path="res://assets/videos/aethos.ogv" id="9_5leje"]
[ext_resource type="Texture2D" uid="uid://b64380nlyb51s" path="res://assets/images/th-3339884062.jpg" id="10_oc1pd"]
[ext_resource type="Texture2D" uid="uid://dkxnddpjsc37b" path="res://assets/images/game/stages/hell/underworld/evilghost.png" id="11_32ict"]
[ext_resource type="Texture2D" uid="uid://rmbwpp03fdd1" path="res://assets/images/game/stages/hell/underworld/phs2/statir.png" id="12_qh1ws"]
[ext_resource type="Texture2D" uid="uid://cdw46qbhxa2ib" path="res://assets/images/game/stages/hell/underworld/phs2/backhil.png" id="13_15i10"]
[ext_resource type="Texture2D" uid="uid://bk7oyy0xdfvuh" path="res://assets/images/game/stages/hell/underworld/phs2/bulk.png" id="14_84p45"]
[ext_resource type="Texture2D" uid="uid://d1e1phthbntay" path="res://assets/images/game/stages/hell/underworld/phs2/chop.png" id="15_wspxb"]
[ext_resource type="Texture2D" uid="uid://b57ed55jvt5h7" path="res://assets/images/game/stages/hell/underworld/phs2/clouds.png" id="16_ffgus"]
[ext_resource type="Texture2D" uid="uid://fqemrrgvwx3r" path="res://assets/images/game/stages/hell/underworld/phs2/glow2.png" id="17_gh173"]
[ext_resource type="Texture2D" uid="uid://3vt0ugut5tw7" path="res://assets/images/game/stages/hell/underworld/phs2/glow.png" id="18_yh24i"]
[ext_resource type="Texture2D" uid="uid://c41pnugresbyg" path="res://assets/images/game/stages/hell/underworld/phs2/hills.png" id="19_3c51n"]
[ext_resource type="SpriteFrames" uid="uid://bt53p8gdna841" path="res://assets/images/game/stages/hell/underworld/fireparticles.xml" id="19_wspxb"]
[ext_resource type="SpriteFrames" uid="uid://cxkdd2qkj65jj" path="res://assets/images/game/stages/hell/underworld/lovingfamily.xml" id="20_15i10"]
[ext_resource type="Texture2D" uid="uid://bychpnn8xr8of" path="res://assets/images/game/stages/hell/underworld/gradient.png" id="21_84p45"]
[ext_resource type="PackedScene" uid="uid://b48j7g2wm14dg" path="res://scenes/game/characters/jeffy_ARTDIFFERNT.tscn" id="23_gh173"]
[ext_resource type="PackedScene" uid="uid://b060ilrprlgbo" path="res://scenes/game/characters/marvin_art.tscn" id="24_yh24i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ne0xw"]
atlas = ExtResource("2_b2ggg")
region = Rect2(0, 0, 337, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ksym"]
atlas = ExtResource("2_b2ggg")
region = Rect2(337, 0, 337, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5c7t"]
atlas = ExtResource("2_b2ggg")
region = Rect2(674, 0, 337, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_p36mu"]
atlas = ExtResource("2_b2ggg")
region = Rect2(1011, 0, 337, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_5leje"]
atlas = ExtResource("2_b2ggg")
region = Rect2(1348, 0, 337, 438)

[sub_resource type="SpriteFrames" id="SpriteFrames_oc1pd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne0xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ksym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5c7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p36mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5leje")
}],
"loop": false,
"name": &"idle",
"speed": 30.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qh1ws"]
blend_mode = 1

[node name="Stage" type="Node2D" node_paths=PackedStringArray("cam")]
script = ExtResource("1_p36mu")
cam = NodePath("cam")
default_cam_zoom = 0.65

[node name="cam" type="Camera2D" parent="."]
position = Vector2(640, 360)
position_smoothing_enabled = true

[node name="normal" type="Node2D" parent="."]

[node name="lungun" type="AnimatedSprite2D" parent="normal"]
position = Vector2(1300, -500)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_oc1pd")
animation = &"idle"
autoplay = "idle"
frame = 4
frame_progress = 1.0
centered = false

[node name="1" type="Parallax2D" parent="normal"]
scroll_scale = Vector2(0.95, 0.95)

[node name="Eyebal" type="Sprite2D" parent="normal/1"]
position = Vector2(1200, 0)
texture = ExtResource("3_f1daq")
centered = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="normal"]
scale = Vector2(2.7, 2.7)
sprite_frames = ExtResource("4_f1daq")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.130198

[node name="Parallax2D" type="Parallax2D" parent="normal"]
scroll_scale = Vector2(0.5, 1)

[node name="Hill1" type="Sprite2D" parent="normal/Parallax2D"]
scale = Vector2(2.7, 2.7)
texture = ExtResource("5_e5c7t")

[node name="Parallax2D2" type="Parallax2D" parent="normal"]

[node name="Hill2" type="Sprite2D" parent="normal/Parallax2D2"]
scale = Vector2(2.7, 2.7)
texture = ExtResource("6_p36mu")

[node name="Parallax2D3" type="Parallax2D" parent="normal"]
scroll_scale = Vector2(1.5, 1)

[node name="Hill3" type="Sprite2D" parent="normal/Parallax2D3"]
scale = Vector2(2.7, 2.7)
texture = ExtResource("7_5leje")

[node name="Parallax2D4" type="Parallax2D" parent="normal"]
scale = Vector2(0.5, 0.5)

[node name="Evilghost" type="Sprite2D" parent="normal/Parallax2D4"]
position = Vector2(-2312, -1286)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_32ict")
centered = false

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="normal"]
position = Vector2(-423, 36)
scale = Vector2(2.7, 2.7)
sprite_frames = ExtResource("8_p36mu")
animation = &"chop"
centered = false
offset = Vector2(-440, -275)
metadata/_edit_lock_ = true

[node name="evil" type="Node2D" parent="."]
visible = false

[node name="Statir" type="Sprite2D" parent="evil"]
texture = ExtResource("12_qh1ws")

[node name="Backhil" type="Sprite2D" parent="evil"]
texture = ExtResource("13_15i10")

[node name="Bulk" type="Sprite2D" parent="evil"]
texture = ExtResource("14_84p45")

[node name="Glow2" type="Sprite2D" parent="evil"]
material = SubResource("CanvasItemMaterial_qh1ws")
position = Vector2(-710.5, -196.5)
texture = ExtResource("17_gh173")

[node name="Glow" type="Sprite2D" parent="evil"]
material = SubResource("CanvasItemMaterial_qh1ws")
position = Vector2(-710.5, -196.5)
texture = ExtResource("18_yh24i")

[node name="Chop" type="Sprite2D" parent="evil"]
position = Vector2(-924, -261)
texture = ExtResource("15_wspxb")

[node name="Clouds" type="Sprite2D" parent="evil"]
texture = ExtResource("16_ffgus")

[node name="Parallax2D" type="Parallax2D" parent="evil"]
scroll_scale = Vector2(1.2, 1.2)

[node name="Hills" type="Sprite2D" parent="evil/Parallax2D"]
texture = ExtResource("19_3c51n")

[node name="art_style_change_for_no_reason" type="Node2D" parent="."]
visible = false

[node name="Gradient" type="Sprite2D" parent="art_style_change_for_no_reason"]
position = Vector2(100, 400)
scale = Vector2(5, 6)
texture = ExtResource("21_84p45")
centered = false
offset = Vector2(-120, -66.667)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="art_style_change_for_no_reason"]
position = Vector2(800, 500)
scale = Vector2(4, 3)
sprite_frames = ExtResource("19_wspxb")
animation = &"burn"
autoplay = "burn"
frame_progress = 0.122803
centered = false
offset = Vector2(-175.75, -99.333)

[node name="Bf" parent="art_style_change_for_no_reason" instance=ExtResource("23_gh173")]
position = Vector2(176, 1039)

[node name="Bf2" parent="art_style_change_for_no_reason" instance=ExtResource("24_yh24i")]
position = Vector2(1006, 979)
rotation = 3.14159
scale = Vector2(0.7, -0.7)

[node name="cutscene2" type="Node2D" parent="."]
visible = false
position = Vector2(139, -11)

[node name="front_jeff" type="AnimatedSprite2D" parent="cutscene2"]
position = Vector2(80, 433)
animation = &""

[node name="cutscene" type="CanvasLayer" parent="."]

[node name="vido" type="VideoStreamPlayer" parent="cutscene"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("9_5leje")
expand = true
buffering_msec = 100
metadata/_edit_lock_ = true

[node name="fake out" type="Node2D" parent="cutscene"]

[node name="loving_famaily" type="AnimatedSprite2D" parent="cutscene/fake out"]
position = Vector2(360, -900)
sprite_frames = ExtResource("20_15i10")
animation = &"breakdown"
frame = 37
frame_progress = 1.0

[node name="colorfg" type="ColorRect" parent="cutscene"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="Th-3339884062" type="Sprite2D" parent="cutscene"]
position = Vector2(4767, 543)
texture = ExtResource("10_oc1pd")

[node name="dad_position" type="Marker2D" parent="."]
position = Vector2(-317, 512)

[node name="gf_position" type="Marker2D" parent="."]
position = Vector2(646, 474)

[node name="bf_position" type="Marker2D" parent="."]
position = Vector2(578, 548)
